# freeform_optics

./: .gitignore  README.md  _rays.py  main.py  pyproject.toml
src/freeform_optics/: __init__.py  imgproc.py  logging.py  loss.py  lr_scheduler.py  optic.py  rays.py
tests/: conftest.py  test_training.py
