[project]
name = "freeform-optics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drjit>=1.2.0",
    "graphviz>=0.21",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "napari[pyqt5]>=0.6.6",
    "numpy>=2.4.2",
]
