[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeform_optics"]

[project]
name = "freeform-optics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drjit>=1.2.0",
    "graphviz>=0.21",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    # "napari[pyqt5]>=0.6.6",
    "numpy>=2.4.2",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false
